fix: Change the text color of the primary light and secondary light chips to increase contrast Card: https://app.clickup.com/t/2rgwgwp

--- a/src/styles/globals/_chip.css
+++ b/src/styles/globals/_chip.css
@@ -38,7 +38,7 @@
 
 .chip[chip-bg-color="primary-light"] {
     --toujou-chip-color-bg: var(--color-primary-light);
-    --toujou-chip-text-color: var(--color-primary-dark);
+    --toujou-chip-text-color: var(--color-font);
 }
 
 .chip[chip-bg-color="primary-very-light"] {
@@ -53,7 +53,7 @@
 
 .chip[chip-bg-color="secondary-light"] {
     --toujou-chip-color-bg: var(--color-secondary-light);
-    --toujou-chip-text-color: var(--color-secondary-dark);
+    --toujou-chip-text-color: var(--color-font);
 }
 
 .chip[chip-bg-color="secondary-very-light"] {
